// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip correctly positions tooltip content based on position prop 1`] = `
.c1 {
  background-color: #000;
  border-radius: 3px;
  color: #fff;
  font-size: 14px;
  opacity: 0;
  padding: 8px;
  position: absolute;
  text-align: left;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
  visibility: hidden;
  white-space: normal;
  width: 160px;
  z-index: 1070;
  bottom: 150%;
  left: 50%;
  margin-left: -80px;
}

.c0 {
  border-bottom: 1px solid #d8d8d8;
  cursor: help;
  display: inline-block;
  position: relative;
}

.c0:hover >:last-child {
  opacity: 1;
  visibility: visible;
  z-index: 1070;
}

<div
  className="c0"
  style={Object {}}
>
  Hover over me
  <div
    className="c1"
    style={Object {}}
  >
    Hello!
  </div>
</div>
`;

exports[`Tooltip correctly positions tooltip content based on position prop 2`] = `
.c1 {
  background-color: #000;
  border-radius: 3px;
  color: #fff;
  font-size: 14px;
  opacity: 0;
  padding: 8px;
  position: absolute;
  text-align: left;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
  visibility: hidden;
  white-space: normal;
  width: 160px;
  z-index: 1070;
  top: 150%;
  left: 50%;
  margin-left: -80px;
}

.c0 {
  border-bottom: 1px solid #d8d8d8;
  cursor: help;
  display: inline-block;
  position: relative;
}

.c0:hover >:last-child {
  opacity: 1;
  visibility: visible;
  z-index: 1070;
}

<div
  className="c0"
  style={Object {}}
>
  Hover over me
  <div
    className="c1"
    style={Object {}}
  >
    Hello!
  </div>
</div>
`;

exports[`Tooltip correctly positions tooltip content based on position prop 3`] = `
.c1 {
  background-color: #000;
  border-radius: 3px;
  color: #fff;
  font-size: 14px;
  opacity: 0;
  padding: 8px;
  position: absolute;
  text-align: left;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
  visibility: hidden;
  white-space: normal;
  width: 160px;
  z-index: 1070;
  right: 120%;
  top: -5px;
}

.c0 {
  border-bottom: 1px solid #d8d8d8;
  cursor: help;
  display: inline-block;
  position: relative;
}

.c0:hover >:last-child {
  opacity: 1;
  visibility: visible;
  z-index: 1070;
}

<div
  className="c0"
  style={Object {}}
>
  Hover over me
  <div
    className="c1"
    style={Object {}}
  >
    Hello!
  </div>
</div>
`;

exports[`Tooltip correctly positions tooltip content based on position prop 4`] = `
.c1 {
  background-color: #000;
  border-radius: 3px;
  color: #fff;
  font-size: 14px;
  opacity: 0;
  padding: 8px;
  position: absolute;
  text-align: left;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
  visibility: hidden;
  white-space: normal;
  width: 160px;
  z-index: 1070;
  top: -5px;
  left: 120%;
}

.c0 {
  border-bottom: 1px solid #d8d8d8;
  cursor: help;
  display: inline-block;
  position: relative;
}

.c0:hover >:last-child {
  opacity: 1;
  visibility: visible;
  z-index: 1070;
}

<div
  className="c0"
  style={Object {}}
>
  Hover over me
  <div
    className="c1"
    style={Object {}}
  >
    Hello!
  </div>
</div>
`;
